--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -3,3 +3,7 @@ include: package:flutter_lints/flutter.yaml
 linter:
   rules:
     prefer_single_quotes: true
+
+analyzer:
+  plugins:
+    - custom_lint
