--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,11 +12,18 @@ dependencies:
     sdk: flutter
   cupertino_icons: ^1.0.8
   numberpicker: ^2.1.2
+  flutter_riverpod: ^2.6.1
+  riverpod_annotation: ^2.6.1
+  hooks_riverpod: ^2.6.1
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^5.0.0
+  riverpod_generator: ^2.6.3
+  build_runner: ^2.4.13
+  custom_lint: ^0.7.0
+  riverpod_lint: ^2.6.3
 
 flutter:
   uses-material-design: true
